@@ -1,3 +1,10 @@
+2007-04-23  Bastien Nocera  <hadess@hadess.net>
+
+	* lib/ephy-file-helpers.c: (xdg_user_dir_lookup),
+	(ephy_file_downloads_dir_from_xdg), (ephy_file_downloads_dir):
+	Use xdg-user-dirs to get a better default Downloads directory
+	(Closes: #415342)
+
 2007-04-20  Bastien Nocera  <hadess@hadess.net>
 
 	* data/mime-types-permissions.xml: Add "application/x-quicktimeplayer"
